# svxlink-usrp-authkey

./: .travis.yml  INSTALL.adoc
.github/workflows/: codeql-analysis.yml
distributions/fedora/: svxlink.spec
docker/debian-build/: Dockerfile  build-svxlink.sh  entrypoint.sh
docker/fedora-build/: Dockerfile  entrypoint.sh
docker/ubuntu-build/: Dockerfile
src/: CMakeLists.txt  versions
src/async/demo/: CMakeLists.txt
src/doc/man/: CMakeLists.txt  svxreflector.conf.5
src/svxlink/: CMakeLists.txt
src/svxlink/contrib/svxserver/: CMakeLists.txt
src/svxlink/modules/echolink/: ModuleEchoLink.conf  QsoImpl.cpp
src/svxlink/reflector/: Reflector.cpp  ReflectorClient.cpp
src/svxlink/svxlink/: CMakeLists.txt  ReflectorLogic.cpp  gpio.conf.in  svxlink-asl.conf.in  svxlink-c4fm.conf.in  svxlink-dmr.conf.in  svxlink-dstar.conf.in  svxlink-el.conf.in  svxlink-ri49.conf.in
src/svxlink/svxlink/contrib/UsrpLogic/: CMakeLists.txt  UsrpLogic.cpp
src/svxlink/systemd/: CMakeLists.txt  svxlink-asl.default.in  svxlink-asl.service.in  svxlink-c4fm.default.in  svxlink-c4fm.service.in  svxlink-dmr.default.in  svxlink-dmr.service.in  svxlink-dstar.default.in  svxlink-dstar.service.in  svxlink-el.default.in  svxlink-el.service.in  svxlink.default.in
