include_directories(trx svxlink)

add_subdirectory(digital)
add_subdirectory(trx)
add_subdirectory(svxlink)
add_subdirectory(modules)
#add_subdirectory(scripts)
add_subdirectory(remotetrx)
add_subdirectory(reflector)
add_subdirectory(siglevdetcal)
add_subdirectory(devcal)
add_subdirectory(contrib)
add_subdirectory(systemd)
